# mirage

./: .gitignore  CHANGES.rst  MANIFEST.in  environment_python_3.11.yml  environment_python_3.11_intel_mac.yml  environment_python_3.12.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
docs/: install.rst
examples/wfss_demo/: README.md  make_toy_wfss_image.py  visualize_wfss_demo.py  wfss_demo.py
mirage/: grism_tso_simulator.py
mirage/apt/: apt_inputs.py
mirage/catalogs/: create_catalog.py  model_atmosphere.py  spectra_from_catalog.py
mirage/dark/: dark_prep.py
mirage/psf/: deployments.py  psf_selection.py  segment_psfs.py  soss_trace.py  tools.py
mirage/ramp_generator/: obs_generator.py
mirage/reference_files/: crds_tools.py
mirage/seed_image/: catalog_seed_image.py  fits_seed_image.py  get_psf.py
mirage/utils/: backgrounds.py  utils.py
mirage/yaml/: yaml_generator.py
tests/: test_apt_interface.py  test_backgrounds.py  test_catalog_seed_generator.py  test_deployments.py  test_ephemeris_functions.py  test_fgs_imaging.py  test_flux_cal.py  test_non_sidereal.py  test_segment_psfs.py  test_yaml_generator.py
tests/test_data/FGS/: fgs_imaging_example.yaml  fgs_point_sources.list  seed_im_from_catalog_test_galaxies_catalog.list
tests/test_data/NIRCam/: nircam_imaging_example.yaml  seed_im_from_catalog_test_galaxies_catalog.list  seed_im_from_catalog_test_ptsrc_catalog.list
tests/test_data/NIRISS/: niriss_imaging_example.yaml  niriss_imaging_test.yaml  niriss_point_sources.list  niriss_point_sources_mod.list
